# myrust

./: Cargo.toml  Dioxus.toml  package-lock.json  package.json
.cargo/: config.toml
examples/: tabs.rs
src/: main.rs
