[package]
name = "myrust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", optional = true }
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "b20db13", features = ["fullstack", "router"] }
dioxus-cli-config = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "b20db13", optional = true }
clap = { version = "4.5.17", optional = true }
dioxus-logger = "0.5.1"
ui = { git = "https://github.com/chungwong/rayquaza.git" , rev = "763c722"}
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"], optional = true }
tracing = "0.1.40"

[features]
default = []
server = [
  "dep:axum",
  "dep:clap",
  "dep:dioxus-cli-config",
  "dep:tokio",
  "dioxus/axum",
]
web = ["dioxus/web"]
axum = ["dep:axum"]
tokio = ["dep:tokio"]
