[package]
name = "myrust"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "b20db13", features = ["fullstack", "router"] }
dioxus-logger = "0.5.1"
tokio = { version = "1.40.0", features = ["full"], optional = true }
tracing = "0.1.40"

[features]
default = []
server = [
  "dep:tokio",
  "dioxus/axum",
]
web = ["dioxus/web"]
tokio = ["dep:tokio"]
