[package]
name = "myrust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
dioxus = { version = "0.6.0-alpha.2", features = ["fullstack", "router"] }
dioxus-logger = "0.5.1"
web-sys = { version = "0.3.70", features = ["HtmlDocument", "HtmlBodyElement", "Window"] }

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
